--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.2",
     "xml2js": "^0.6.2",
     "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
